libexec_SCRIPTS=check_nwc_health
GL_MODULES=\
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Extraopts.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Getopt.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/SysDescPrettify.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MIB2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPFRAMEWORKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACESWITCHINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACEWIRELESSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALARMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALCATELIND1BASEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARISTAENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBATCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ASYNCOSMAILMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ATTACKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BGP4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BIANCABRICKMIBRESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATAVMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATSGPROXYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CHECKPOINTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOBGP4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCCMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCONFIGMANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENHANCEDMEMPOOLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYALARMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYFRUCONTROLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENVMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOETHERNETFABRICEXTENDERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFEATURECONTROLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFIREWALLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOHSRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIETFNATMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIPSECFLOWMONITORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOL2L3INTERFACECONFIGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLWAPPAPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLWAPPHAMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOMEMORYPOOLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPORTCHANNELMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPROCESSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBHWENVIROMENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBRNDMNGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBSYSMNGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBTUNINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSTACKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSTACKWISEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSYSTEMEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOVTPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CLAVISTERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DISKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYSTATEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ETHERLIKEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPGLOBALMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPLOCALMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCEOSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCMGMTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FORTINETFORTIGATEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNAGENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNSWL4SWITCHGROUPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HH3CENTITYEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HOSTRESOURCESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HPICFCHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IEEE8023LAGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPFORWARDMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERIVEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LARAMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LMSENSORSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LOADBALSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MINIIFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETGEARMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENCHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENNSRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENPRODUCTSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENRESOURCEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSWITCHMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDCISCOCPUMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDCISCOINTERFACESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDNETSWITCHMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDSTATISTICSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ONEACCESSSYSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OSPFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANCOMMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANPRODUCTSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PROXYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RAPIDCITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RESOURCEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/S5CHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPV2TCV1MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STATISTICSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STEELHEADMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STEELHEADEXMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SWMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOPTICSROOTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYSTEMRESOURCESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDDISKIOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDSNMPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/USAGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VRRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXSYSTEMEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXWLANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/CSF.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/UPNP.pm
EXTRA_MODULES=\
  Classes/UPNP/AVM/FritzBox7390/Components/InterfaceSubsystem.pm \
  Classes/UPNP/AVM/FritzBox7390/Components/SmartHomeSubsystem.pm \
  Classes/UPNP/AVM/FritzBox7390.pm \
  Classes/UPNP/AVM.pm \
  Classes/UPNP.pm \
  Classes/Server/LinuxLocal.pm \
  Classes/Server/WindowsLocal.pm \
  Classes/Server/SolarisLocal.pm \
  Classes/Server/Linux.pm \
  Classes/Server/Linux/Component/CpuSubsystem.pm \
  Classes/Server/Linux/Component/EnvironmentalSubsystem.pm \
  Classes/Server/Linux/Component/MemSubsystem.pm \
  Classes/Bintec/Bibo/Components/EnvironmentalSubsystem.pm \
  Classes/Bintec/Bibo/Components/MemSubsystem.pm \
  Classes/Bintec/Bibo/Components/CpuSubsystem.pm \
  Classes/Bintec/Bibo.pm \
  Classes/Bintec.pm \
  Classes/Cisco/OLDCISCOINTERFACESMIB/Component/InterfaceSubsystem.pm \
  Classes/Cisco/CISCOIPSECFLOWMONITOR/Component/VpnSubsystem.pm \
  Classes/Cisco/CISCOENHANCEDMEMPOOLMIB/Component/MemSubsystem.pm \
  Classes/Cisco/CISCOMEMORYPOOLMIB/Component/MemSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/FanSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/ModuleSubsystem.pm \
  Classes/Cisco/CISCOENTITYFRUCONTROLMIB/Component/PowersupplySubsystem.pm \
  Classes/Cisco/CISCOENTITYSENSORMIB/Component/SensorSubsystem.pm \
  Classes/Cisco/CISCOENTITYALARMMIB/Component/AlarmSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/TemperatureSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/PowersupplySubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/VoltageSubsystem.pm \
  Classes/Cisco/CISCOENVMONMIB/Component/FanSubsystem.pm \
  Classes/Cisco/CISCOSTACKMIB/Component/StackSubsystem.pm \
  Classes/Cisco/CISCOSTACKWISEMIB/Component/StackSubsystem.pm \
  Classes/Cisco/ASA.pm \
  Classes/Cisco/IOS/Component/HaSubsystem.pm \
  Classes/Cisco/IOS/Component/ConfigSubsystem.pm \
  Classes/Cisco/IOS/Component/CpuSubsystem.pm \
  Classes/Cisco/IOS/Component/MemSubsystem.pm \
  Classes/Cisco/IOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/IOS/Component/ConnectionSubsystem.pm \
  Classes/Cisco/IOS/Component/NatSubsystem.pm \
  Classes/Cisco/IOS/Component/BgpSubsystem.pm \
  Classes/Cisco/IOS.pm \
  Classes/Cisco/NXOS/Component/CpuSubsystem.pm \
  Classes/Cisco/NXOS/Component/MemSubsystem.pm \
  Classes/Cisco/NXOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/NXOS/Component/FexSubsystem.pm \
  Classes/Cisco/NXOS.pm \
  Classes/Cisco/WLC/Component/MemSubsystem.pm \
  Classes/Cisco/WLC/Component/CpuSubsystem.pm \
  Classes/Cisco/WLC/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/WLC/Component/WlanSubsystem.pm \
  Classes/Cisco/WLC.pm \
  Classes/Cisco/PrimeNCS.pm \
  Classes/Cisco/UCOS.pm \
  Classes/Cisco/CCM/Component/PhoneSubsystem.pm \
  Classes/Cisco/CCM/Component/CmSubsystem.pm \
  Classes/Cisco/CCM.pm \
  Classes/Cisco/AsyncOS/Component/KeySubsystem.pm \
  Classes/Cisco/AsyncOS/Component/MemSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/CpuSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/TemperatureSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/PowersupplySubsystem.pm \
  Classes/Cisco/AsyncOS/Component/FanSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/RaidSubsystem.pm \
  Classes/Cisco/AsyncOS/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/AsyncOS.pm \
  Classes/Cisco/SB/Component/MemSubsystem.pm \
  Classes/Cisco/SB/Component/CpuSubsystem.pm \
  Classes/Cisco/SB/Component/EnvironmentalSubsystem.pm \
  Classes/Cisco/SB.pm \
  Classes/Cisco.pm \
  Classes/OneOS/Component/EnvironmentalSubsystem.pm \
  Classes/OneOS/Component/CpuSubsystem.pm \
  Classes/OneOS/Component/MemSubsystem.pm \
  Classes/OneOS.pm \
  Classes/Nortel/S5/Component/EnvironmentalSubsystem.pm \
  Classes/Nortel/S5/Component/CpuSubsystem.pm \
  Classes/Nortel/S5/Component/MemSubsystem.pm \
  Classes/Nortel/S5.pm \
  Classes/Nortel.pm \
  Classes/Juniper/NetScreen/Component/CpuSubsystem.pm \
  Classes/Juniper/NetScreen/Component/MemSubsystem.pm \
  Classes/Juniper/NetScreen/Component/EnvironmentalSubsystem.pm \
  Classes/Juniper/NetScreen/Component/VsdSubsystem.pm \
  Classes/Juniper/NetScreen.pm \
  Classes/Juniper/IVE/Component/MemSubsystem.pm \
  Classes/Juniper/IVE/Component/CpuSubsystem.pm \
  Classes/Juniper/IVE/Component/EnvironmentalSubsystem.pm \
  Classes/Juniper/IVE/Component/DiskSubsystem.pm \
  Classes/Juniper/IVE/Component/UserSubsystem.pm \
  Classes/Juniper/IVE.pm \
  Classes/Juniper/SRX/Component/EnvironmentalSubsystem.pm \
  Classes/Juniper/SRX/Component/CpuSubsystem.pm \
  Classes/Juniper/SRX/Component/MemSubsystem.pm \
  Classes/Juniper/SRX.pm \
  Classes/Juniper.pm \
  Classes/AlliedTelesyn.pm \
  Classes/Fortigate/Component/MemSubsystem.pm \
  Classes/Fortigate/Component/CpuSubsystem.pm \
  Classes/Fortigate/Component/EnvironmentalSubsystem.pm \
  Classes/Fortigate/Component/SensorSubsystem.pm \
  Classes/Fortigate.pm \
  Classes/FabOS/Component/MemSubsystem.pm \
  Classes/FabOS/Component/CpuSubsystem.pm \
  Classes/FabOS/Component/EnvironmentalSubsystem.pm \
  Classes/FabOS/Component/SensorSubsystem.pm \
  Classes/FabOS.pm \
  Classes/HH3C/Component/EntitySubsystem.pm \
  Classes/HH3C/Component/EnvironmentalSubsystem.pm \
  Classes/HH3C/Component/MemSubsystem.pm \
  Classes/HH3C/Component/CpuSubsystem.pm \
  Classes/HH3C.pm \
  Classes/Huawei/Component/EnvironmentalSubsystem.pm \
  Classes/Huawei/Component/CpuSubsystem.pm \
  Classes/Huawei/Component/MemSubsystem.pm \
  Classes/Huawei/CloudEngine.pm \
  Classes/Huawei.pm \
  Classes/HP/Procurve/Component/MemSubsystem.pm \
  Classes/HP/Procurve/Component/CpuSubsystem.pm \
  Classes/HP/Procurve/Component/EnvironmentalSubsystem.pm \
  Classes/HP/Procurve/Component/SensorSubsystem.pm \
  Classes/HP/Procurve.pm \
  Classes/HP.pm \
  Classes/MEOS.pm \
  Classes/Brocade.pm \
  Classes/SecureOS.pm \
  Classes/HSRP/Component/HSRPSubsystem.pm \
  Classes/HSRP.pm \
  Classes/IFMIB/Component/LinkAggregation.pm \
  Classes/IFMIB/Component/InterfaceSubsystem.pm \
  Classes/IFMIB/Component/StackSubsystem.pm \
  Classes/IFMIB.pm \
  Classes/IPFORWARDMIB/Component/RoutingSubsystem.pm \
  Classes/IPFORWARDMIB.pm \
  Classes/IPMIB/Component/RoutingSubsystem.pm \
  Classes/IPMIB.pm \
  Classes/VRRPMIB/Component/VRRPSubsystem.pm \
  Classes/VRRPMIB.pm \
  Classes/HOSTRESOURCESMIB/Component/DeviceSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/DiskSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/EnvironmentalSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/CpuSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/MemSubsystem.pm \
  Classes/HOSTRESOURCESMIB/Component/UptimeSubsystem.pm \
  Classes/HOSTRESOURCESMIB.pm \
  Classes/LMSENSORSMIB/Component/EnvironmentalSubsystem.pm \
  Classes/LMSENSORSMIB/Component/FanSubsystem.pm \
  Classes/LMSENSORSMIB/Component/TemperatureSubsystem.pm \
  Classes/LMSENSORSMIB.pm \
  Classes/ENTITYSENSORMIB.pm \
  Classes/ENTITYSENSORMIB/Component/EnvironmentalSubsystem.pm \
  Classes/OSPF/Component/NeighborSubsystem.pm \
  Classes/OSPF.pm \
  Classes/BGP/Component/PeerSubsystem.pm \
  Classes/BGP.pm \
  Classes/FCMGMT/Component/EnvironmentalSubsystem.pm \
  Classes/FCMGMT/Component/SensorSubsystem.pm \
  Classes/FCMGMT.pm \
  Classes/FCEOS/Components/EnvironmentalSubsystem.pm \
  Classes/FCEOS/Components/FruSubsystem.pm \
  Classes/FCEOS.pm \
  Classes/UCDMIB/Components/MemSubsystem.pm \
  Classes/UCDMIB/Components/SwapSubsystem.pm \
  Classes/UCDMIB/Components/CpuSubsystem.pm \
  Classes/UCDMIB/Components/LoadSubsystem.pm \
  Classes/UCDMIB/Components/DiskSubsystem.pm \
  Classes/UCDMIB/Components/ProcessSubsystem.pm \
  Classes/UCDMIB.pm \
  Classes/F5/F5BIGIP/Component/GTM.pm \
  Classes/F5/F5BIGIP/Component/LTM.pm \
  Classes/F5/F5BIGIP/Component/DiskSubsystem.pm \
  Classes/F5/F5BIGIP/Component/MemSubsystem.pm \
  Classes/F5/F5BIGIP/Component/PowersupplySubsystem.pm \
  Classes/F5/F5BIGIP/Component/TemperatureSubsystem.pm \
  Classes/F5/F5BIGIP/Component/CpuSubsystem.pm \
  Classes/F5/F5BIGIP/Component/FanSubsystem.pm \
  Classes/F5/F5BIGIP/Component/EnvironmentalSubsystem.pm \
  Classes/F5/F5BIGIP.pm \
  Classes/F5.pm \
  Classes/CheckPoint/Firewall1/Component/EnvironmentalSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/TemperatureSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/FanSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/VoltageSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/PowersupplySubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/DiskSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/MngmtSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/SvnSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/FwSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/HaSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/CpuSubsystem.pm \
  Classes/CheckPoint/Firewall1/Component/MemSubsystem.pm \
  Classes/CheckPoint/Firewall1.pm \
  Classes/CheckPoint/VSX/Component/FwSubsystem.pm \
  Classes/CheckPoint/VSX.pm \
  Classes/CheckPoint/Gaia.pm \
  Classes/CheckPoint.pm \
  Classes/Clavister/Firewall1/Component/EnvironmentalSubsystem.pm \
  Classes/Clavister/Firewall1/Component/CpuSubsystem.pm \
  Classes/Clavister/Firewall1/Component/MemSubsystem.pm \
  Classes/Clavister/Firewall1.pm \
  Classes/Clavister.pm \
  Classes/SGOS/Component/MemSubsystem.pm \
  Classes/SGOS/Component/CpuSubsystem.pm \
  Classes/SGOS/Component/EnvironmentalSubsystem.pm \
  Classes/SGOS/Component/SensorSubsystem.pm \
  Classes/SGOS/Component/DiskSubsystem.pm \
  Classes/SGOS/Component/SecuritySubsystem.pm \
  Classes/SGOS/Component/ConnectionSubsystem.pm \
  Classes/SGOS.pm \
  Classes/AVOS/Component/KeySubsystem.pm \
  Classes/AVOS/Component/SecuritySubsystem.pm \
  Classes/AVOS/Component/ConnectionSubsystem.pm \
  Classes/AVOS/Component/MemSubsystem.pm \
  Classes/AVOS/Component/CpuSubsystem.pm \
  Classes/AVOS.pm \
  Classes/Alcatel/OmniAccess/Component/HaSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/MemSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/CpuSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/PowersupplySubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/FanSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/StorageSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/EnvironmentalSubsystem.pm \
  Classes/Alcatel/OmniAccess/Component/WlanSubsystem.pm \
  Classes/Alcatel/OmniAccess.pm \
  Classes/Alcatel.pm \
  Classes/ALARMMIB/Component/AlarmSubsystem.pm \
  Classes/Foundry/Component/SLBSubsystem.pm \
  Classes/Foundry/Component/MemSubsystem.pm \
  Classes/Foundry/Component/CpuSubsystem.pm \
  Classes/Foundry/Component/EnvironmentalSubsystem.pm \
  Classes/Foundry/Component/PowersupplySubsystem.pm \
  Classes/Foundry/Component/FanSubsystem.pm \
  Classes/Foundry/Component/TemperatureSubsystem.pm \
  Classes/Foundry/Component/ModuleSubsystem.pm \
  Classes/Foundry.pm \
  Classes/RAPIDCITYMIB/Component/EnvironmentalSubsystem.pm \
  Classes/RAPIDCITYMIB/Component/PowersupplySubsystem.pm \
  Classes/RAPIDCITYMIB/Component/FanSubsystem.pm \
  Classes/RAPIDCITYMIB/Component/TemperatureSubsystem.pm \
  Classes/RAPIDCITYMIB.pm \
  Classes/PaloAlto/Component/MemSubsystem.pm \
  Classes/PaloAlto/Component/CpuSubsystem.pm \
  Classes/PaloAlto/Component/EnvironmentalSubsystem.pm \
  Classes/PaloAlto/Component/HaSubsystem.pm \
  Classes/PaloAlto.pm \
  Classes/Bluecoat.pm \
  Classes/Cumulus.pm \
  Classes/Netgear.pm \
  Classes/Lantronix.pm \
  Classes/Lantronix/SLS.pm \
  Classes/Arista/Component/EnvironmentalSubsystem.pm \
  Classes/Arista.pm \
  Classes/Riverbed/SteelheadEX/Component/EnvironmentalSubsystem.pm \
  Classes/Riverbed/Steelhead/Component/EnvironmentalSubsystem.pm \
  Classes/Riverbed/Steelhead.pm \
  Classes/Riverbed.pm \
  Classes/Device.pm

SED=/bin/sed
GREP=/bin/grep
CAT=/bin/cat
ECHO=/bin/echo
if DISABLE_STANDALONE
STANDALONE = no
else
STANDALONE = yes
endif

SUFFIXES = .pl .pm .sh

VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t

EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)

CLEANFILES=$(libexec_SCRIPTS)

AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@

.pm :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.pl :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.sh :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

$(libexec_SCRIPTS) : $(EXTRA_DIST)
	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
	$(ECHO) "# nagios: +epn" >> $@
	$(ECHO) >> $@
	if [ "${STANDALONE}" == "yes" ]; then \
		$(ECHO) i am standalone; \
		for m in ${GL_MODULES}; do \
			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(SED) -e '/^__PACKAGE__/,$$d' | $(AWK) -f ./subst >> $@; \
		done \
	fi
	for m in ${EXTRA_MODULES}; do \
		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
	done
	$(ECHO) "package main;" >> $@
	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
	chmod +x $@

